ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-wp
  namespace: vcluster-aadi-vcluster
spec:
  ingressClassName: nginx
  rules:
  - host: aadiwordpress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-x-default-x-aadi-vcluster
            port: 
              number: 80
